--- a/yaml/Berger.Extensions.Json-CI-PR.yml
+++ b/yaml/Berger.Extensions.Json-CI-PR.yml
@@ -40,4 +40,5 @@ jobs:
     inputs:
       command: push
       nuGetFeedType: external
+      publishFeedCredentials: 'berger.extensions.json-nuget'
 ...
