--- a/src/Berger.Extensions.Json/Berger.Extensions.Json.csproj
+++ b/src/Berger.Extensions.Json/Berger.Extensions.Json.csproj
@@ -6,7 +6,10 @@
 	</PropertyGroup>
 	
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	</ItemGroup>
+	
+	<ItemGroup>
+	  <Folder Include="Configurations\" />
 	</ItemGroup>
 </Project>
